feat: add header

--- a/index.html
+++ b/index.html
@@ -5,12 +5,20 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Andrey Fedotov</title>
   <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
-
+  <div class="wrapper">
+    <div class="main-column">
+      <header class="header heading heading--light">
+        <h1 class="header__title"><span class="header__title--bold">Andrey</span> Fedotov</h1>
+        <p class="header__subtitle">Junior frontend developer</p>
+      </header>
+    </div>
+    <div class="sub-column"></div>
+  </div>
 </body>
 
 </html>
