feat: add about section

--- a/index.html
+++ b/index.html
@@ -16,6 +16,16 @@
         <h1 class="header__title"><span class="header__title--bold">Andrey</span> Fedotov</h1>
         <p class="header__subtitle">Junior frontend developer</p>
       </header>
+      <section class="section about">
+        <h2 class="about__heading heading heading--light">About me</h2>
+        <div class="about__section-wrapper section-wrapper">
+          <p class="about__content content">
+            Hi, my name is Andrey and I'm 33 years old. I moved to Moscow from Perm in 2012 and have been working as a
+            furniture constructor since 2013. I also like to listen to music, such as hardcore punk, post-hardcore etc.
+            I play drums in a local underground band.
+          </p>
+        </div>
+      </section>
     </div>
     <div class="sub-column"></div>
   </div>
