feat: add skills section

--- a/index.html
+++ b/index.html
@@ -26,6 +26,53 @@
           </p>
         </div>
       </section>
+      <section class="section skills">
+        <h2 class="skills__heading heading heading--light">Skills</h2>
+        <div class="skills__section-wrapper section-wrapper">
+          <div class="skills__skill skill html">
+            <h3 class="skill__skill-name">HTML 5</h3>
+            <div class="skill__progress-bar progress-bar">
+              <div class="progress-bar__progress"></div>
+            </div>
+          </div>
+          <div class="skills__skill skill css">
+            <h3 class="skill__skill-name">CSS 3 / Sass (Scss)</h3>
+            <div class="skill__progress-bar progress-bar">
+              <div class="progress-bar__progress"></div>
+            </div>
+          </div>
+          <div class="skills__skill skill js">
+            <h3 class="skill__skill-name">JavaScript (ES6)</h3>
+            <div class="skill__progress-bar progress-bar">
+              <div class="progress-bar__progress"></div>
+            </div>
+          </div>
+          <div class="skills__skill skill node">
+            <h3 class="skill__skill-name">Node.js</h3>
+            <div class="skill__progress-bar progress-bar">
+              <div class="progress-bar__progress"></div>
+            </div>
+          </div>
+          <div class="skills__skill skill figma">
+            <h3 class="skill__skill-name">Figma</h3>
+            <div class="skill__progress-bar progress-bar">
+              <div class="progress-bar__progress"></div>
+            </div>
+          </div>
+          <div class="skills__skill skill vs-code">
+            <h3 class="skill__skill-name">VS Code</h3>
+            <div class="skill__progress-bar progress-bar">
+              <div class="progress-bar__progress"></div>
+            </div>
+          </div>
+          <div class="skills__skill skill git">
+            <h3 class="skill__skill-name">Git / GitHub</h3>
+            <div class="skill__progress-bar progress-bar">
+              <div class="progress-bar__progress"></div>
+            </div>
+          </div>
+        </div>
+      </section>
     </div>
     <div class="sub-column"></div>
   </div>
