feat: add projects section

--- a/index.html
+++ b/index.html
@@ -73,9 +73,64 @@
           </div>
         </div>
       </section>
+      <section class="section education">
+        <h2 class="projects__heaeding heading heading--light">Projects</h2>
+        <div class="projects__section-wrapper section-wrapper">
+          <div class="projects__slider slider">
+            <div class="slider__arrow arrow arrow--left">
+              <div class="arrow__line"></div>
+            </div>
+            <div class="slider__frame">
+              <div class="slider__slides">
+                <div class="slider__slide slide game-of-life">
+                  <h3 class="slide__title">
+                    <a href="https://thelastandrew.github.io/game-of-life/" target="_blank">Check deployment</a> | <a
+                      href="https://github.com/thelastandrew/game-of-life" target="_blank">Visit repository</a>
+                  </h3>
+                </div>
+                <div class="slider__slide slide audio-player">
+                  <h3 class="slide__title">
+                    <a href="https://thelastandrew.github.io/audio-player/" target="_blank">Check deployment</a> | <a
+                      href="https://github.com/thelastandrew/audio-player" target="_blank">Visit repository</a>
+                  </h3>
+                </div>
+                <div class="slider__slide slide portfolio">
+                  <h3 class="slide__title">
+                    <a href="https://thelastandrew.github.io/portfolio/" target="_blank">Check deployment</a> | <a
+                      href="https://github.com/thelastandrew/portfolio" target="_blank">Visit repository</a>
+                  </h3>
+                </div>
+                <div class="slider__slide slide memory-game">
+                  <h3 class="slide__title">
+                    <a href="https://thelastandrew.github.io/memory-game/" target="_blank">Check deployment</a> | <a
+                      href="https://github.com/thelastandrew/memory-game" target="_blank">Visit repository</a>
+                  </h3>
+                </div>
+                <div class="slider__slide slide shelter">
+                  <h3 class="slide__title">
+                    <a href="https://thelastandrew.github.io/shelter/pages/main/" target="_blank">Check deployment</a> |
+                    <a href="https://github.com/thelastandrew/shelter" target="_blank">Visit repository</a>
+                  </h3>
+                </div>
+                <div class="slider__slide slide random-jokes">
+                  <h3 class="slide__title">
+                    <a href="https://thelastandrew.github.io/random-jokes/" target="_blank">Check deployment</a> | <a
+                      href="https://github.com/thelastandrew/random-jokes" target="_blank">Visit repository</a>
+                  </h3>
+                </div>
+              </div>
+            </div>
+            <div class="slider__arrow arrow arrow--right">
+              <div class="arrow__line">
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </div>
     <div class="sub-column"></div>
   </div>
+  <script src="./index.js"></script>
 </body>
 
 </html>
