feat: add experience section

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       </header>
       <section class="section about">
         <h2 class="about__heading heading heading--light">About me</h2>
-        <div class="about__section-wrapper section-wrapper">
+        <div class="about__content-wrapper content-wrapper">
           <p class="about__content content">
             Hi, my name is Andrey and I'm 33 years old. I moved to Moscow from Perm in 2012 and have been working as a
             furniture constructor since 2013. I also like to listen to music, such as hardcore punk, post-hardcore etc.
@@ -28,7 +28,7 @@
       </section>
       <section class="section skills">
         <h2 class="skills__heading heading heading--light">Skills</h2>
-        <div class="skills__section-wrapper section-wrapper">
+        <div class="skills__content-wrapper content-wrapper">
           <div class="skills__skill skill html">
             <h3 class="skill__skill-name">HTML 5</h3>
             <div class="skill__progress-bar progress-bar">
@@ -73,9 +73,9 @@
           </div>
         </div>
       </section>
-      <section class="section education">
+      <section class="section projects">
         <h2 class="projects__heaeding heading heading--light">Projects</h2>
-        <div class="projects__section-wrapper section-wrapper">
+        <div class="projects__content-wrapper content-wrapper">
           <div class="projects__slider slider">
             <div class="slider__arrow arrow arrow--left">
               <div class="arrow__line"></div>
@@ -125,6 +125,14 @@
               </div>
             </div>
           </div>
+        </div>
+      </section>
+      <section class="section experience">
+        <h2 class="experience__heading heading heading--light">Working Experience</h2>
+        <div class="experience__content-wrapper content-wrapper">
+          <p class="experience__content content">
+            I don't have any commercial based working experience on this moment. But thas's why I'm here, to get one!
+          </p>
         </div>
       </section>
     </div>
