--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <div class="wrapper">
-    <div class="main-column">
+    <div class="main-column column">
       <header class="header heading heading--light">
         <h1 class="header__title"><span class="header__title--bold">Andrey</span> Fedotov</h1>
         <p class="header__subtitle">Junior frontend developer</p>
@@ -136,7 +136,11 @@
         </div>
       </section>
     </div>
-    <div class="sub-column"></div>
+    <div class="sub-column column">
+      <section class="userpic">
+        <div class="userpic__content"></div>
+      </section>
+    </div>
   </div>
   <script src="./index.js"></script>
 </body>
