feat: add contacts section

--- a/index.html
+++ b/index.html
@@ -140,6 +140,21 @@
       <section class="userpic">
         <div class="userpic__content"></div>
       </section>
+      <section class="section contacts">
+        <h2 class="contacts__heading heading heading--dark">Contacts</h2>
+        <div class="contacts__content-wrapper content-wrapper">
+          <dl class="contacts__list">
+            <dt>Phone</dt>
+            <dd><a href="tel:+79096816950">+7 (909) 681-69-50</a></dd>
+            <dt>Email</dt>
+            <dd><a href="mailto:thelastandrew@gmail.com">thelastandrew@gmail.com</a></dd>
+            <dt>Telegram</dt>
+            <dd><a href="https://t.me/thelastandrew" target="_blank" rel="author">@thelastandrew</a></dd>
+            <dt>GitHub</dt>
+            <dd><a href="https://github.com/thelastandrew">thelastandrew</a></dd>
+          </dl>
+        </div>
+      </section>
     </div>
   </div>
   <script src="./index.js"></script>
