--- a/index.html
+++ b/index.html
@@ -155,6 +155,32 @@
           </dl>
         </div>
       </section>
+      <section class="section education">
+        <h2 class="edication__heading heading heading--dark">Education</h2>
+        <div class="education__content-wrapper content-wrapper">
+          <dl class="education__list">
+            <dt><a href="https://www.freecodecamp.org/" target="_blank">freeCodeCamp</a></dt>
+            <dd>
+              <p>Sept 2021</p>
+              <p><a
+                  href="https://www.freecodecamp.org/certification/fcce97f825b-fcd3-4c69-a35c-9f3f005c06e3/responsive-web-design"
+                  target="_blank">Certificate</a></p>
+            </dd>
+            <dt><a href="https://rs.school/" target="_blank">RS School (Stage 0)</a></dt>
+            <dd>
+              <p>Dec 2021 - March 2022</p>
+              <p><a href="https://app.rs.school/certificate/1pasast8" target="_blank">Certificate</a></p>
+            </dd>
+            <dt><a href="https://rs.school/" target="_blank">RS School (Stages 1-3)</a></dt>
+            <dd>March 2022 - present</dd>
+            <dt><a href="https://www.codewars.com/" target="_blank">Codewars</a></dt>
+            <dd>
+              <p>Continuously</p>
+              <p><img src="https://www.codewars.com/users/thelastandrew/badges/micro" alt="codewars badge"></p>
+            </dd>
+          </dl>
+        </div>
+      </section>
     </div>
   </div>
   <script src="./index.js"></script>
