feat: add soft-skills section

--- a/index.html
+++ b/index.html
@@ -181,6 +181,17 @@
           </dl>
         </div>
       </section>
+      <section class="section soft-skills">
+        <h2 class="soft-skills__heading heading heading--dark">Soft Skills</h2>
+        <div class="soft-skills__content-wrapper content-wrapper">
+          <ul class="soft-skills__list">
+            <li>Hard working</li>
+            <li>Communicable</li>
+            <li>Curious</li>
+            <li>No bad habits</li>
+          </ul>
+        </div>
+      </section>
     </div>
   </div>
   <script src="./index.js"></script>
