feat: add info to about section

--- a/index.html
+++ b/index.html
@@ -21,8 +21,10 @@
         <div class="about__content-wrapper content-wrapper">
           <p class="about__content content">
             Hi, my name is Andrey and I'm 33 years old. I moved to Moscow from Perm in 2012 and have been working as a
-            furniture constructor since 2013. I also like to listen to music, such as hardcore punk, post-hardcore etc.
-            I play drums in a local underground band.
+            furniture constructor since 2013. Now I'm really into programming on JavaScript.<br>
+            I also like to listen to music, such as hardcore punk, post-hardcore etc.
+            I play drums in a local underground band.<br>
+            Feel free to contact me to get more info.
           </p>
         </div>
       </section>
