fix: fix validation warning and remove unsed font

--- a/index.html
+++ b/index.html
@@ -140,9 +140,9 @@
       </section>
     </div>
     <div class="sub-column column">
-      <section class="userpic">
+      <div class="userpic">
         <div class="userpic__content"></div>
-      </section>
+      </div>
       <section class="section contacts">
         <h2 class="contacts__heading heading heading--dark">Contacts</h2>
         <div class="contacts__content-wrapper content-wrapper">
