fix: add taget blank for github link

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
             <dt>Telegram</dt>
             <dd><a href="https://t.me/thelastandrew" target="_blank" rel="author">@thelastandrew</a></dd>
             <dt>GitHub</dt>
-            <dd><a href="https://github.com/thelastandrew">thelastandrew</a></dd>
+            <dd><a href="https://github.com/thelastandrew" target="_blank">thelastandrew</a></dd>
           </dl>
         </div>
       </section>
