feat: add languages section

--- a/index.html
+++ b/index.html
@@ -195,6 +195,17 @@
           </ul>
         </div>
       </section>
+      <section class="section languages">
+        <h2 class="languages__heading heading heading--dark">Languages</h2>
+        <div class="languages__content-wrapper content-wrapper">
+          <dl>
+            <dt>Russian</dt>
+            <dd>Native</dd>
+            <dt>English</dt>
+            <dd>B1/B2</dd>
+          </dl>
+        </div>
+      </section>
     </div>
   </div>
   <script src="./index.js"></script>
