feat: add location to contacts

--- a/index.html
+++ b/index.html
@@ -147,6 +147,8 @@
         <h2 class="contacts__heading heading heading--dark">Contacts</h2>
         <div class="contacts__content-wrapper content-wrapper">
           <dl class="contacts__list">
+            <dt>Location</dt>
+            <dd>Russia, Moscow</dd>
             <dt>Phone</dt>
             <dd><a href="tel:+79096816950">+7 (909) 681-69-50</a></dd>
             <dt>Email</dt>
