feat: change about me section

--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
         <h2 class="about__heading heading heading--light">About me</h2>
         <div class="about__content-wrapper content-wrapper">
           <p class="about__content content">
-            Hi, my name is Andrey and I'm 33 years old. I moved to Moscow from Perm in 2012 and have been working as a
-            furniture constructor since 2013. Now I'm really into programming on JavaScript.<br>
-            I also like to listen to music, such as hardcore punk, post-hardcore etc.
-            I play drums in a local underground band.<br>
+            I'm a junior frontend developer, currently a student of <a href="https://rs.school/" target="_blank">RS
+              School</a>. My technical skills are HTML/CSS, JavaScript and a bit Node.js (see more below). I plan to
+            master TypeScript and React in the nearest future. I have a strong ability to learn new technologies and I
+            constantly improve my skills. My aim is to create high quality applications.<br>
             Feel free to contact me to get more info.
           </p>
         </div>
