--- a/index.html
+++ b/index.html
@@ -12,198 +12,207 @@
 
 <body>
   <div class="wrapper">
-    <div class="main-column column">
-      <header class="header heading heading--light">
-        <h1 class="header__title"><span class="header__title--bold">Andrey</span> Fedotov</h1>
-        <p class="header__subtitle">Junior frontend developer</p>
-      </header>
-      <section class="section about">
-        <h2 class="about__heading heading heading--light">About me</h2>
-        <div class="about__content-wrapper content-wrapper">
-          <p class="about__content content">
-            I'm a junior frontend developer, currently a student of <a href="https://rs.school/" target="_blank">RS
-              School</a>. My technical skills are HTML/CSS, JavaScript and a bit Node.js (see more below). I plan to
-            master TypeScript and React in the nearest future. I have a strong ability to learn new technologies and I
-            constantly improve my skills. My aim is to create high quality applications.<br>
-            Feel free to contact me to get more info.
-          </p>
+    <header class="header">
+      <div class="title">
+        <div class="title__heading heading heading--light">
+          <h1 class="heading__main">
+            <span class="heading--bold">Andrey</span> Fedotov
+          </h1>
+          <p class="heading__subtitle">Junior frontend developer</p>
         </div>
-      </section>
-      <section class="section skills">
-        <h2 class="skills__heading heading heading--light">Skills</h2>
-        <div class="skills__content-wrapper content-wrapper">
-          <div class="skills__skill skill html">
-            <h3 class="skill__skill-name">HTML 5</h3>
-            <div class="skill__progress-bar progress-bar">
-              <div class="progress-bar__progress"></div>
-            </div>
-          </div>
-          <div class="skills__skill skill css">
-            <h3 class="skill__skill-name">CSS 3 / Sass (Scss)</h3>
-            <div class="skill__progress-bar progress-bar">
-              <div class="progress-bar__progress"></div>
-            </div>
-          </div>
-          <div class="skills__skill skill js">
-            <h3 class="skill__skill-name">JavaScript (ES6)</h3>
-            <div class="skill__progress-bar progress-bar">
-              <div class="progress-bar__progress"></div>
-            </div>
-          </div>
-          <div class="skills__skill skill node">
-            <h3 class="skill__skill-name">Node.js</h3>
-            <div class="skill__progress-bar progress-bar">
-              <div class="progress-bar__progress"></div>
-            </div>
-          </div>
-          <div class="skills__skill skill figma">
-            <h3 class="skill__skill-name">Figma</h3>
-            <div class="skill__progress-bar progress-bar">
-              <div class="progress-bar__progress"></div>
-            </div>
-          </div>
-          <div class="skills__skill skill vs-code">
-            <h3 class="skill__skill-name">VS Code</h3>
-            <div class="skill__progress-bar progress-bar">
-              <div class="progress-bar__progress"></div>
-            </div>
-          </div>
-          <div class="skills__skill skill git">
-            <h3 class="skill__skill-name">Git / GitHub</h3>
-            <div class="skill__progress-bar progress-bar">
-              <div class="progress-bar__progress"></div>
-            </div>
-          </div>
-        </div>
-      </section>
-      <section class="section projects">
-        <h2 class="projects__heaeding heading heading--light">Projects</h2>
-        <div class="projects__content-wrapper content-wrapper">
-          <div class="projects__slider slider">
-            <div class="slider__arrow arrow arrow--left">
-              <div class="arrow__line"></div>
-            </div>
-            <div class="slider__frame">
-              <div class="slider__slides">
-                <div class="slider__slide slide game-of-life">
-                  <h3 class="slide__title">
-                    <a href="https://thelastandrew.github.io/game-of-life/" target="_blank">Check deployment</a> | <a
-                      href="https://github.com/thelastandrew/game-of-life" target="_blank">Visit repository</a>
-                  </h3>
-                </div>
-                <div class="slider__slide slide audio-player">
-                  <h3 class="slide__title">
-                    <a href="https://thelastandrew.github.io/audio-player/" target="_blank">Check deployment</a> | <a
-                      href="https://github.com/thelastandrew/audio-player" target="_blank">Visit repository</a>
-                  </h3>
-                </div>
-                <div class="slider__slide slide portfolio">
-                  <h3 class="slide__title">
-                    <a href="https://thelastandrew.github.io/portfolio/" target="_blank">Check deployment</a> | <a
-                      href="https://github.com/thelastandrew/portfolio" target="_blank">Visit repository</a>
-                  </h3>
-                </div>
-                <div class="slider__slide slide memory-game">
-                  <h3 class="slide__title">
-                    <a href="https://thelastandrew.github.io/memory-game/" target="_blank">Check deployment</a> | <a
-                      href="https://github.com/thelastandrew/memory-game" target="_blank">Visit repository</a>
-                  </h3>
-                </div>
-                <div class="slider__slide slide shelter">
-                  <h3 class="slide__title">
-                    <a href="https://thelastandrew.github.io/shelter/pages/main/" target="_blank">Check deployment</a> |
-                    <a href="https://github.com/thelastandrew/shelter" target="_blank">Visit repository</a>
-                  </h3>
-                </div>
-                <div class="slider__slide slide random-jokes">
-                  <h3 class="slide__title">
-                    <a href="https://thelastandrew.github.io/random-jokes/" target="_blank">Check deployment</a> | <a
-                      href="https://github.com/thelastandrew/random-jokes" target="_blank">Visit repository</a>
-                  </h3>
-                </div>
-              </div>
-            </div>
-            <div class="slider__arrow arrow arrow--right">
-              <div class="arrow__line">
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-      <section class="section experience">
-        <h2 class="experience__heading heading heading--light">Working Experience</h2>
-        <div class="experience__content-wrapper content-wrapper">
-          <p class="experience__content content">
-            I don't have any commercial based working experience on this moment. But thas's why I'm here, to get one!
-          </p>
-        </div>
-      </section>
-    </div>
-    <div class="sub-column column">
+      </div>
       <div class="userpic">
         <div class="userpic__content"></div>
       </div>
-      <section class="section contacts">
-        <h2 class="contacts__heading heading heading--dark">Contacts</h2>
-        <div class="contacts__content-wrapper content-wrapper">
-          <dl class="contacts__list">
-            <dt>Location</dt>
-            <dd>Russia, Moscow</dd>
-            <dt>Phone</dt>
-            <dd><a href="tel:+79096816950">+7 (909) 681-69-50</a></dd>
-            <dt>Email</dt>
-            <dd><a href="mailto:thelastandrew@gmail.com">thelastandrew@gmail.com</a></dd>
-            <dt>Telegram</dt>
-            <dd><a href="https://t.me/thelastandrew" target="_blank" rel="author">@thelastandrew</a></dd>
-            <dt>GitHub</dt>
-            <dd><a href="https://github.com/thelastandrew" target="_blank">thelastandrew</a></dd>
-          </dl>
-        </div>
-      </section>
-      <section class="section education">
-        <h2 class="edication__heading heading heading--dark">Education</h2>
-        <div class="education__content-wrapper content-wrapper">
-          <dl class="education__list">
-            <dt><a href="https://www.freecodecamp.org/" target="_blank">freeCodeCamp</a></dt>
-            <dd>
-              <p>Sept 2021</p>
-              <p><a
-                  href="https://www.freecodecamp.org/certification/fcce97f825b-fcd3-4c69-a35c-9f3f005c06e3/responsive-web-design"
-                  target="_blank">Certificate</a></p>
-            </dd>
-            <dt><a href="https://rs.school/" target="_blank">RS School (Stage 0)</a></dt>
-            <dd>
-              <p>Dec 2021 - March 2022</p>
-              <p><a href="https://app.rs.school/certificate/1pasast8" target="_blank">Certificate</a></p>
-            </dd>
-            <dt><a href="https://rs.school/" target="_blank">RS School (Stages 1-3)</a></dt>
-            <dd>March 2022 - present</dd>
-          </dl>
-        </div>
-      </section>
-      <section class="section soft-skills">
-        <h2 class="soft-skills__heading heading heading--dark">Soft Skills</h2>
-        <div class="soft-skills__content-wrapper content-wrapper">
-          <ul class="soft-skills__list">
-            <li>Hard working</li>
-            <li>Communicable</li>
-            <li>Curious</li>
-            <li>No bad habits</li>
-          </ul>
-        </div>
-      </section>
-      <section class="section languages">
-        <h2 class="languages__heading heading heading--dark">Languages</h2>
-        <div class="languages__content-wrapper content-wrapper">
-          <dl>
-            <dt>Russian</dt>
-            <dd>Native</dd>
-            <dt>English</dt>
-            <dd>B1/B2</dd>
-          </dl>
-        </div>
-      </section>
-    </div>
+    </header>
+    <main class="main">
+      <div class="main-column column">
+        <section class="section about">
+          <h2 class="about__heading heading heading--light">About me</h2>
+          <div class="about__content-wrapper content-wrapper">
+            <p class="about__content content">
+              I'm a junior frontend developer, currently a student of <a href="https://rs.school/" target="_blank">RS
+                School</a>. My technical skills are HTML/CSS, JavaScript and a bit Node.js (see more below). I plan to
+              master TypeScript and React in the nearest future. I have a strong ability to learn new technologies and I
+              constantly improve my skills. My aim is to create high quality applications.<br>
+              Feel free to contact me to get more info.
+            </p>
+          </div>
+        </section>
+        <section class="section skills">
+          <h2 class="skills__heading heading heading--light">Skills</h2>
+          <div class="skills__content-wrapper content-wrapper">
+            <div class="skills__skill skill html">
+              <h3 class="skill__skill-name">HTML 5</h3>
+              <div class="skill__progress-bar progress-bar">
+                <div class="progress-bar__progress"></div>
+              </div>
+            </div>
+            <div class="skills__skill skill css">
+              <h3 class="skill__skill-name">CSS 3 / Sass (Scss)</h3>
+              <div class="skill__progress-bar progress-bar">
+                <div class="progress-bar__progress"></div>
+              </div>
+            </div>
+            <div class="skills__skill skill js">
+              <h3 class="skill__skill-name">JavaScript (ES6)</h3>
+              <div class="skill__progress-bar progress-bar">
+                <div class="progress-bar__progress"></div>
+              </div>
+            </div>
+            <div class="skills__skill skill node">
+              <h3 class="skill__skill-name">Node.js</h3>
+              <div class="skill__progress-bar progress-bar">
+                <div class="progress-bar__progress"></div>
+              </div>
+            </div>
+            <div class="skills__skill skill figma">
+              <h3 class="skill__skill-name">Figma</h3>
+              <div class="skill__progress-bar progress-bar">
+                <div class="progress-bar__progress"></div>
+              </div>
+            </div>
+            <div class="skills__skill skill vs-code">
+              <h3 class="skill__skill-name">VS Code</h3>
+              <div class="skill__progress-bar progress-bar">
+                <div class="progress-bar__progress"></div>
+              </div>
+            </div>
+            <div class="skills__skill skill git">
+              <h3 class="skill__skill-name">Git / GitHub</h3>
+              <div class="skill__progress-bar progress-bar">
+                <div class="progress-bar__progress"></div>
+              </div>
+            </div>
+          </div>
+        </section>
+        <section class="section projects">
+          <h2 class="projects__heaeding heading heading--light">Projects</h2>
+          <div class="projects__content-wrapper content-wrapper">
+            <div class="projects__slider slider">
+              <div class="slider__arrow arrow arrow--left">
+                <div class="arrow__line"></div>
+              </div>
+              <div class="slider__frame">
+                <div class="slider__slides">
+                  <div class="slider__slide slide game-of-life">
+                    <h3 class="slide__title">
+                      <a href="https://thelastandrew.github.io/game-of-life/" target="_blank">Check deployment</a> | <a
+                        href="https://github.com/thelastandrew/game-of-life" target="_blank">Visit repository</a>
+                    </h3>
+                  </div>
+                  <div class="slider__slide slide audio-player">
+                    <h3 class="slide__title">
+                      <a href="https://thelastandrew.github.io/audio-player/" target="_blank">Check deployment</a> | <a
+                        href="https://github.com/thelastandrew/audio-player" target="_blank">Visit repository</a>
+                    </h3>
+                  </div>
+                  <div class="slider__slide slide portfolio">
+                    <h3 class="slide__title">
+                      <a href="https://thelastandrew.github.io/portfolio/" target="_blank">Check deployment</a> | <a
+                        href="https://github.com/thelastandrew/portfolio" target="_blank">Visit repository</a>
+                    </h3>
+                  </div>
+                  <div class="slider__slide slide memory-game">
+                    <h3 class="slide__title">
+                      <a href="https://thelastandrew.github.io/memory-game/" target="_blank">Check deployment</a> | <a
+                        href="https://github.com/thelastandrew/memory-game" target="_blank">Visit repository</a>
+                    </h3>
+                  </div>
+                  <div class="slider__slide slide shelter">
+                    <h3 class="slide__title">
+                      <a href="https://thelastandrew.github.io/shelter/pages/main/" target="_blank">Check deployment</a>
+                      |
+                      <a href="https://github.com/thelastandrew/shelter" target="_blank">Visit repository</a>
+                    </h3>
+                  </div>
+                  <div class="slider__slide slide random-jokes">
+                    <h3 class="slide__title">
+                      <a href="https://thelastandrew.github.io/random-jokes/" target="_blank">Check deployment</a> | <a
+                        href="https://github.com/thelastandrew/random-jokes" target="_blank">Visit repository</a>
+                    </h3>
+                  </div>
+                </div>
+              </div>
+              <div class="slider__arrow arrow arrow--right">
+                <div class="arrow__line">
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+        <section class="section experience">
+          <h2 class="experience__heading heading heading--light">Working Experience</h2>
+          <div class="experience__content-wrapper content-wrapper">
+            <p class="experience__content content">
+              I don't have any commercial based working experience on this moment. But thas's why I'm here, to get one!
+            </p>
+          </div>
+        </section>
+      </div>
+      <div class="sub-column column">
+        <section class="section contacts">
+          <h2 class="contacts__heading heading heading--dark">Contacts</h2>
+          <div class="contacts__content-wrapper content-wrapper">
+            <dl class="contacts__list">
+              <dt>Location</dt>
+              <dd>Russia, Moscow</dd>
+              <dt>Phone</dt>
+              <dd><a href="tel:+79096816950">+7 (909) 681-69-50</a></dd>
+              <dt>Email</dt>
+              <dd><a href="mailto:thelastandrew@gmail.com">thelastandrew@gmail.com</a></dd>
+              <dt>Telegram</dt>
+              <dd><a href="https://t.me/thelastandrew" target="_blank" rel="author">@thelastandrew</a></dd>
+              <dt>GitHub</dt>
+              <dd><a href="https://github.com/thelastandrew" target="_blank">thelastandrew</a></dd>
+            </dl>
+          </div>
+        </section>
+        <section class="section education">
+          <h2 class="edication__heading heading heading--dark">Education</h2>
+          <div class="education__content-wrapper content-wrapper">
+            <dl class="education__list">
+              <dt><a href="https://www.freecodecamp.org/" target="_blank">freeCodeCamp</a></dt>
+              <dd>
+                <p>Sept 2021</p>
+                <p><a
+                    href="https://www.freecodecamp.org/certification/fcce97f825b-fcd3-4c69-a35c-9f3f005c06e3/responsive-web-design"
+                    target="_blank">Certificate</a></p>
+              </dd>
+              <dt><a href="https://rs.school/" target="_blank">RS School (Stage 0)</a></dt>
+              <dd>
+                <p>Dec 2021 - March 2022</p>
+                <p><a href="https://app.rs.school/certificate/1pasast8" target="_blank">Certificate</a></p>
+              </dd>
+              <dt><a href="https://rs.school/" target="_blank">RS School (Stages 1-3)</a></dt>
+              <dd>March 2022 - present</dd>
+            </dl>
+          </div>
+        </section>
+        <section class="section soft-skills">
+          <h2 class="soft-skills__heading heading heading--dark">Soft Skills</h2>
+          <div class="soft-skills__content-wrapper content-wrapper">
+            <ul class="soft-skills__list">
+              <li>Hard working</li>
+              <li>Communicable</li>
+              <li>Curious</li>
+              <li>No bad habits</li>
+            </ul>
+          </div>
+        </section>
+        <section class="section languages">
+          <h2 class="languages__heading heading heading--dark">Languages</h2>
+          <div class="languages__content-wrapper content-wrapper">
+            <dl>
+              <dt>Russian</dt>
+              <dd>Native</dd>
+              <dt>English</dt>
+              <dd>B1/B2</dd>
+            </dl>
+          </div>
+        </section>
+      </div>
+    </main>
   </div>
   <script src="./index.js"></script>
 </body>
