feat: update cv

--- a/index.html
+++ b/index.html
@@ -31,17 +31,31 @@
           <h2 class="about__heading heading heading--light">About me</h2>
           <div class="about__content-wrapper content-wrapper">
             <p class="about__content content">
-              I'm a junior frontend developer, currently a student of <a href="https://rs.school/" target="_blank">RS
-                School</a>. My technical skills are HTML/CSS, JavaScript and a bit Node.js (see more below). I plan to
-              master TypeScript and React in the nearest future. I have a strong ability to learn new technologies and I
-              constantly improve my skills. My aim is to create high quality applications.<br>
-              Feel free to contact me to get more info.
+              Hello! I'm a frontend developer and my main technical skills are React + TypeScript. I also know how to use Scss preprocessor and familiar with Tailwind framework. During my studying I worked with REST API and briefly touched Node.js.
             </p>
           </div>
         </section>
         <section class="section skills">
           <h2 class="skills__heading heading heading--light">Skills</h2>
           <div class="skills__content-wrapper content-wrapper">
+            <div class="skills__skill skill js">
+              <h3 class="skill__skill-name">JavaScript (ES6)</h3>
+              <div class="skill__progress-bar progress-bar">
+                <div class="progress-bar__progress"></div>
+              </div>
+            </div>
+            <div class="skills__skill skill ts">
+              <h3 class="skill__skill-name">TypeScript</h3>
+              <div class="skill__progress-bar progress-bar">
+                <div class="progress-bar__progress"></div>
+              </div>
+            </div>
+            <div class="skills__skill skill react">
+              <h3 class="skill__skill-name">React</h3>
+              <div class="skill__progress-bar progress-bar">
+                <div class="progress-bar__progress"></div>
+              </div>
+            </div>
             <div class="skills__skill skill html">
               <h3 class="skill__skill-name">HTML 5</h3>
               <div class="skill__progress-bar progress-bar">
@@ -54,32 +68,20 @@
                 <div class="progress-bar__progress"></div>
               </div>
             </div>
-            <div class="skills__skill skill js">
-              <h3 class="skill__skill-name">JavaScript (ES6)</h3>
-              <div class="skill__progress-bar progress-bar">
-                <div class="progress-bar__progress"></div>
-              </div>
-            </div>
             <div class="skills__skill skill node">
               <h3 class="skill__skill-name">Node.js</h3>
               <div class="skill__progress-bar progress-bar">
                 <div class="progress-bar__progress"></div>
               </div>
             </div>
-            <div class="skills__skill skill figma">
-              <h3 class="skill__skill-name">Figma</h3>
-              <div class="skill__progress-bar progress-bar">
-                <div class="progress-bar__progress"></div>
-              </div>
-            </div>
-            <div class="skills__skill skill vs-code">
-              <h3 class="skill__skill-name">VS Code</h3>
-              <div class="skill__progress-bar progress-bar">
-                <div class="progress-bar__progress"></div>
-              </div>
-            </div>
             <div class="skills__skill skill git">
               <h3 class="skill__skill-name">Git / GitHub</h3>
+              <div class="skill__progress-bar progress-bar">
+                <div class="progress-bar__progress"></div>
+              </div>
+            </div>
+            <div class="skills__skill skill webpack">
+              <h3 class="skill__skill-name">Webpack</h3>
               <div class="skill__progress-bar progress-bar">
                 <div class="progress-bar__progress"></div>
               </div>
@@ -95,41 +97,47 @@
               </div>
               <div class="slider__frame">
                 <div class="slider__slides">
+                  <div class="slider__slide slide news-portal">
+                    <h3 class="slide__title">
+                      <a href="https://thelastandrew.github.io/migration-to-ts/" target="_blank">Check deployment</a> | <a
+                        href="https://github.com/thelastandrew/migration-to-ts" target="_blank">Check source code</a>
+                    </h3>
+                  </div>
                   <div class="slider__slide slide game-of-life">
                     <h3 class="slide__title">
                       <a href="https://thelastandrew.github.io/game-of-life/" target="_blank">Check deployment</a> | <a
-                        href="https://github.com/thelastandrew/game-of-life" target="_blank">Visit repository</a>
+                        href="https://github.com/thelastandrew/game-of-life" target="_blank">Check source code</a>
                     </h3>
                   </div>
                   <div class="slider__slide slide audio-player">
                     <h3 class="slide__title">
                       <a href="https://thelastandrew.github.io/audio-player/" target="_blank">Check deployment</a> | <a
-                        href="https://github.com/thelastandrew/audio-player" target="_blank">Visit repository</a>
+                        href="https://github.com/thelastandrew/audio-player" target="_blank">Check source code</a>
                     </h3>
                   </div>
                   <div class="slider__slide slide portfolio">
                     <h3 class="slide__title">
                       <a href="https://thelastandrew.github.io/portfolio/" target="_blank">Check deployment</a> | <a
-                        href="https://github.com/thelastandrew/portfolio" target="_blank">Visit repository</a>
+                        href="https://github.com/thelastandrew/portfolio" target="_blank">Check source code</a>
                     </h3>
                   </div>
                   <div class="slider__slide slide memory-game">
                     <h3 class="slide__title">
                       <a href="https://thelastandrew.github.io/memory-game/" target="_blank">Check deployment</a> | <a
-                        href="https://github.com/thelastandrew/memory-game" target="_blank">Visit repository</a>
+                        href="https://github.com/thelastandrew/memory-game" target="_blank">Check source code</a>
                     </h3>
                   </div>
                   <div class="slider__slide slide shelter">
                     <h3 class="slide__title">
                       <a href="https://thelastandrew.github.io/shelter/pages/main/" target="_blank">Check deployment</a>
                       |
-                      <a href="https://github.com/thelastandrew/shelter" target="_blank">Visit repository</a>
+                      <a href="https://github.com/thelastandrew/shelter" target="_blank">Check source code</a>
                     </h3>
                   </div>
                   <div class="slider__slide slide random-jokes">
                     <h3 class="slide__title">
                       <a href="https://thelastandrew.github.io/random-jokes/" target="_blank">Check deployment</a> | <a
-                        href="https://github.com/thelastandrew/random-jokes" target="_blank">Visit repository</a>
+                        href="https://github.com/thelastandrew/random-jokes" target="_blank">Check source code</a>
                     </h3>
                   </div>
                 </div>
@@ -145,7 +153,7 @@
           <h2 class="experience__heading heading heading--light">Working Experience</h2>
           <div class="experience__content-wrapper content-wrapper">
             <p class="experience__content content">
-              I don't have any commercial based working experience on this moment. But thas's why I'm here, to get one!
+              I don't have any commercial based working experience on this moment. But that's why I'm here, to get one!
             </p>
           </div>
         </section>
@@ -179,13 +187,20 @@
                     href="https://www.freecodecamp.org/certification/fcce97f825b-fcd3-4c69-a35c-9f3f005c06e3/responsive-web-design"
                     target="_blank">Certificate</a></p>
               </dd>
-              <dt><a href="https://rs.school/" target="_blank">RS School (Stage 0)</a></dt>
+              <dt><a href="https://rs.school/js-stage0/" target="_blank">RS School (JS/FE Pre-School)</a></dt>
               <dd>
                 <p>Dec 2021 - March 2022</p>
                 <p><a href="https://app.rs.school/certificate/1pasast8" target="_blank">Certificate</a></p>
               </dd>
-              <dt><a href="https://rs.school/" target="_blank">RS School (Stages 1-3)</a></dt>
-              <dd>March 2022 - present</dd>
+              <dt><a href="https://rs.school/js/" target="_blank">RS School (JS/FE)</a></dt>
+              <dd>
+                <p>March 2022 - September 2022</p>
+                <p><a href="https://app.rs.school/certificate/28bkk1n9" target="_blank">Certificate</a></p>
+              </dd>
+              <dt><a href="https://rs.school/react/" target="_blank">RS School (REACT)</a></dt>
+              <dd>
+                <p>In progress since september 2022...</p>
+              </dd>
             </dl>
           </div>
         </section>
