feat: chancge contact info

--- a/index.html
+++ b/index.html
@@ -164,9 +164,7 @@
           <div class="contacts__content-wrapper content-wrapper">
             <dl class="contacts__list">
               <dt>Location</dt>
-              <dd>Russia, Moscow</dd>
-              <dt>Phone</dt>
-              <dd><a href="tel:+79096816950">+7 (909) 681-69-50</a></dd>
+              <dd>Shymkent, Kazakhstan</dd>
               <dt>Email</dt>
               <dd><a href="mailto:thelastandrew@gmail.com">thelastandrew@gmail.com</a></dd>
               <dt>Telegram</dt>
