update: update location

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
           <div class="contacts__content-wrapper content-wrapper">
             <dl class="contacts__list">
               <dt>Location</dt>
-              <dd>Shymkent, Kazakhstan</dd>
+              <dd>Ashdod, Israel</dd>
               <dt>Email</dt>
               <dd><a href="mailto:thelastandrew@gmail.com">thelastandrew@gmail.com</a></dd>
               <dt>Telegram</dt>
