refactor: update surname

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Andrey Fedotov</title>
+  <title>Andrey Nikitinski</title>
   <link rel="stylesheet" href="./css/style.css">
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/icons/suitcase.png">
 </head>
@@ -16,7 +16,7 @@
       <div class="title">
         <div class="title__heading heading heading--light">
           <h1 class="heading__main">
-            <span class="heading--bold">Andrey</span> Fedotov
+            <span class="heading--bold">Andrey</span> Nikitinski
           </h1>
           <p class="heading__subtitle">Junior frontend developer</p>
         </div>
