update: update phone number

--- a/index.html
+++ b/index.html
@@ -163,6 +163,8 @@
           <h2 class="contacts__heading heading heading--dark">Contacts</h2>
           <div class="contacts__content-wrapper content-wrapper">
             <dl class="contacts__list">
+              <dt>Phone</dt>
+              <dd><a href="tel:+972545649764">+972 54-5649764</a></dd>
               <dt>Location</dt>
               <dd>Ashdod, Israel</dd>
               <dt>Email</dt>
