update cv information

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <h1 class="heading__main">
             <span class="heading--bold">Andrey</span> Nikitinski
           </h1>
-          <p class="heading__subtitle">Junior frontend developer</p>
+          <p class="heading__subtitle">Junior frontend developer (React)</p>
         </div>
       </div>
       <div class="userpic">
@@ -31,7 +31,7 @@
           <h2 class="about__heading heading heading--light">About me</h2>
           <div class="about__content-wrapper content-wrapper">
             <p class="about__content content">
-              Hello! I'm a frontend developer and my main technical skills are React + TypeScript. I also know how to use Scss preprocessor and familiar with Tailwind framework. During my studying I worked with REST API and briefly touched Node.js.
+              Continuously learning and self-improving junior front-end developer. I'm a new olim and looking for a position, where I can build complicated web applications, using powerful trio <b>React-Redux-Typescript</b>. I started to learn JavaScript in fall of 2021, and now looking back at myself I see how much work has been done and also I can clearly see my future path.
             </p>
           </div>
         </section>
@@ -68,12 +68,6 @@
                 <div class="progress-bar__progress"></div>
               </div>
             </div>
-            <div class="skills__skill skill node">
-              <h3 class="skill__skill-name">Node.js</h3>
-              <div class="skill__progress-bar progress-bar">
-                <div class="progress-bar__progress"></div>
-              </div>
-            </div>
             <div class="skills__skill skill git">
               <h3 class="skill__skill-name">Git / GitHub</h3>
               <div class="skill__progress-bar progress-bar">
@@ -91,70 +85,40 @@
         <section class="section projects">
           <h2 class="projects__heaeding heading heading--light">Projects</h2>
           <div class="projects__content-wrapper content-wrapper">
-            <div class="projects__slider slider">
-              <div class="slider__arrow arrow arrow--left">
-                <div class="arrow__line"></div>
-              </div>
-              <div class="slider__frame">
-                <div class="slider__slides">
-                  <div class="slider__slide slide news-portal">
-                    <h3 class="slide__title">
-                      <a href="https://thelastandrew.github.io/migration-to-ts/" target="_blank">Check deployment</a> | <a
-                        href="https://github.com/thelastandrew/migration-to-ts" target="_blank">Check source code</a>
-                    </h3>
-                  </div>
-                  <div class="slider__slide slide game-of-life">
-                    <h3 class="slide__title">
-                      <a href="https://thelastandrew.github.io/game-of-life/" target="_blank">Check deployment</a> | <a
-                        href="https://github.com/thelastandrew/game-of-life" target="_blank">Check source code</a>
-                    </h3>
-                  </div>
-                  <div class="slider__slide slide audio-player">
-                    <h3 class="slide__title">
-                      <a href="https://thelastandrew.github.io/audio-player/" target="_blank">Check deployment</a> | <a
-                        href="https://github.com/thelastandrew/audio-player" target="_blank">Check source code</a>
-                    </h3>
-                  </div>
-                  <div class="slider__slide slide portfolio">
-                    <h3 class="slide__title">
-                      <a href="https://thelastandrew.github.io/portfolio/" target="_blank">Check deployment</a> | <a
-                        href="https://github.com/thelastandrew/portfolio" target="_blank">Check source code</a>
-                    </h3>
-                  </div>
-                  <div class="slider__slide slide memory-game">
-                    <h3 class="slide__title">
-                      <a href="https://thelastandrew.github.io/memory-game/" target="_blank">Check deployment</a> | <a
-                        href="https://github.com/thelastandrew/memory-game" target="_blank">Check source code</a>
-                    </h3>
-                  </div>
-                  <div class="slider__slide slide shelter">
-                    <h3 class="slide__title">
-                      <a href="https://thelastandrew.github.io/shelter/pages/main/" target="_blank">Check deployment</a>
-                      |
-                      <a href="https://github.com/thelastandrew/shelter" target="_blank">Check source code</a>
-                    </h3>
-                  </div>
-                  <div class="slider__slide slide random-jokes">
-                    <h3 class="slide__title">
-                      <a href="https://thelastandrew.github.io/random-jokes/" target="_blank">Check deployment</a> | <a
-                        href="https://github.com/thelastandrew/random-jokes" target="_blank">Check source code</a>
-                    </h3>
-                  </div>
-                </div>
-              </div>
-              <div class="slider__arrow arrow arrow--right">
-                <div class="arrow__line">
-                </div>
-              </div>
-            </div>
-          </div>
-        </section>
-        <section class="section experience">
-          <h2 class="experience__heading heading heading--light">Working Experience</h2>
-          <div class="experience__content-wrapper content-wrapper">
-            <p class="experience__content content">
-              I don't have any commercial based working experience on this moment. But that's why I'm here, to get one!
-            </p>
+            <ul>
+              <li class="project">
+                <h3 class="project__title">News portal</h3>
+                <p><b>Deploy:</b> <a href="https://thelastandrew.github.io/migration-to-ts/" target="_blank">https://thelastandrew.github.io/migration-to-ts/</a></p>
+                <p><b>Source code:</b> <a href="https://github.com/thelastandrew/migration-to-ts" target="_blank">https://github.com/thelastandrew/migration-to-ts</a></p>
+                <p>
+                  <i><b>Used technologies:</b> TypeScript, REST API fetching</i>
+                </p>
+              </li>
+              <li class="project">
+                <h3 class="project__title">Game of Life</h3>
+                <p><b>Deploy:</b> <a href="https://thelastandrew.github.io/game-of-life/" target="_blank">https://thelastandrew.github.io/game-of-life/</a></p>
+                <p><b>Source code:</b> <a href="https://github.com/thelastandrew/game-of-life" target="_blank">https://github.com/thelastandrew/game-of-life</a></p>
+                <p>
+                  <i><b>Used technologies:</b> HTML Canvas, RequestAnimationFrame</i>
+                </p>
+              </li>
+              <li class="project">
+                <h3 class="project__title">Audio player</h3>
+                <p><b>Deploy:</b> <a href="https://thelastandrew.github.io/audio-player/" target="_blank">https://thelastandrew.github.io/audio-player/</a></p>
+                <p><b>Source code:</b> <a href="https://github.com/thelastandrew/audio-player" target="_blank">https://github.com/thelastandrew/audio-player</a></p>
+                <p>
+                  <i><b>Used technologies:</b> HTML Audio</i>
+                </p>
+              </li>
+              <li class="project">
+                <h3 class="project__title">Shelter</h3>
+                <p><b>Deploy:</b> <a href="https://thelastandrew.github.io/shelter/pages/main/" target="_blank">https://thelastandrew.github.io/shelter/pages/main/</a></p>
+                <p><b>Source code:</b> <a href="https://github.com/thelastandrew/shelter" target="_blank">https://github.com/thelastandrew/shelter</a></p>
+                <p>
+                  <i><b>Used technologies:</b> SCSS, CSS Animations</i>
+                </p>
+              </li>
+            </ul>
           </div>
         </section>
       </div>
@@ -163,12 +127,14 @@
           <h2 class="contacts__heading heading heading--dark">Contacts</h2>
           <div class="contacts__content-wrapper content-wrapper">
             <dl class="contacts__list">
-              <dt>Phone</dt>
-              <dd><a href="tel:+972545649764">+972 54-5649764</a></dd>
               <dt>Location</dt>
               <dd>Ashdod, Israel</dd>
+              <dt>Phone</dt>
+              <dd><a href="tel:+972545649764">+972 54-5649764</a></dd>
               <dt>Email</dt>
               <dd><a href="mailto:thelastandrew@gmail.com">thelastandrew@gmail.com</a></dd>
+              <dt>LinkedIn</dt>
+              <dd><a href="https://www.linkedin.com/in/andrey-nikitinski/" target="_blank">Andrey Nikitinski</a></dd>
               <dt>Telegram</dt>
               <dd><a href="https://t.me/thelastandrew" target="_blank" rel="author">@thelastandrew</a></dd>
               <dt>GitHub</dt>
@@ -180,26 +146,15 @@
           <h2 class="edication__heading heading heading--dark">Education</h2>
           <div class="education__content-wrapper content-wrapper">
             <dl class="education__list">
-              <dt><a href="https://www.freecodecamp.org/" target="_blank">freeCodeCamp</a></dt>
-              <dd>
-                <p>Sept 2021</p>
-                <p><a
-                    href="https://www.freecodecamp.org/certification/fcce97f825b-fcd3-4c69-a35c-9f3f005c06e3/responsive-web-design"
-                    target="_blank">Certificate</a></p>
-              </dd>
               <dt><a href="https://rs.school/js-stage0/" target="_blank">RS School (JS/FE Pre-School)</a></dt>
               <dd>
                 <p>Dec 2021 - March 2022</p>
-                <p><a href="https://app.rs.school/certificate/1pasast8" target="_blank">Certificate</a></p>
+                <p><a href="https://app.rs.school/certificate/p01p5n3e" target="_blank">Certificate</a></p>
               </dd>
               <dt><a href="https://rs.school/js/" target="_blank">RS School (JS/FE)</a></dt>
               <dd>
                 <p>March 2022 - September 2022</p>
-                <p><a href="https://app.rs.school/certificate/28bkk1n9" target="_blank">Certificate</a></p>
-              </dd>
-              <dt><a href="https://rs.school/react/" target="_blank">RS School (REACT)</a></dt>
-              <dd>
-                <p>In progress since september 2022...</p>
+                <p><a href="https://app.rs.school/certificate/gpux7mzx" target="_blank">Certificate</a></p>
               </dd>
             </dl>
           </div>
@@ -222,14 +177,13 @@
               <dt>Russian</dt>
               <dd>Native</dd>
               <dt>English</dt>
-              <dd>B1/B2</dd>
+              <dd>Intermediate / Advanced</dd>
             </dl>
           </div>
         </section>
       </div>
     </main>
   </div>
-  <script src="./index.js"></script>
 </body>
 
 </html>
