--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <h1 class="heading__main">
             <span class="heading--bold">Andrey</span> Nikitinski
           </h1>
-          <p class="heading__subtitle">Junior frontend developer (React)</p>
+          <p class="heading__subtitle">Frontend developer (React)</p>
         </div>
       </div>
       <div class="userpic">
