--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <h2 class="about__heading heading heading--light">About me</h2>
           <div class="about__content-wrapper content-wrapper">
             <p class="about__content content">
-              Continuously learning and self-improving junior front-end developer. I'm a new olim and looking for a position, where I can build complicated web applications, using powerful trio <b>React-Redux-Typescript</b>. I started to learn JavaScript in fall of 2021, and now looking back at myself I see how much work has been done and also I can clearly see my future path.
+              Continuously learning and self-improving junior front-end developer. I'm ole hadash and looking for a position, where I can build complicated web applications, using powerful trio <b>React-Redux-Typescript</b>. I started to learn JavaScript in fall of 2021, and now looking back at myself I see how much work has been done and also I can clearly see my future path.
             </p>
           </div>
         </section>
@@ -128,7 +128,7 @@
           <div class="contacts__content-wrapper content-wrapper">
             <dl class="contacts__list">
               <dt>Location</dt>
-              <dd>Ashdod, Israel</dd>
+              <dd>Be'er Sheva, Israel</dd>
               <dt>Phone</dt>
               <dd><a href="tel:+972545649764">+972 54-5649764</a></dd>
               <dt>Email</dt>
